--- a/src/components/phone/css/phone.css
+++ b/src/components/phone/css/phone.css
@@ -326,6 +326,12 @@
     /*filter: invert(100%);*/
 }
 
+.icons-trophy {
+    background: url(../img/android/icons/trophy.png) no-repeat center;
+    background-size: 32px;
+    /*filter: invert(100%);*/
+}
+
 .icons-ems {
     background: url(../img/android/icons/ems.png) no-repeat center;
     background-size: 32px;
