--- a/src/components/editorplayer/css/editorplayer.css
+++ b/src/components/editorplayer/css/editorplayer.css
@@ -174,6 +174,15 @@
     font-size: 13px;
 }
 
+.box-change .box-editor-desc {
+    margin-top: 10px;
+    font-family: "RobotoLight";
+    color: rgba(255, 255, 255, 0.6);
+    font-size: 13px;
+    text-align: center;
+    max-width: 80%;
+}
+
 .box-in-change {
     width: 210px;
     height: 32px;
@@ -205,7 +214,7 @@
 
 .box-in-change .arrow-change {
     background: url(../img/arrow-left-change.png) no-repeat;
-    width: 20px;
+    width: 70px;
     height: 20px;
     cursor: pointer;
 }
@@ -342,6 +351,20 @@
     text-transform: uppercase;
 }
 
+.editor-info {
+    position: absolute;
+    bottom: 0px;
+    width: 320px;
+    height: 40px;
+    padding: 10px;
+    background: rgb(72, 185, 242);
+    justify-content: center;
+    align-items: center;
+    font-family: "Roboto";
+    font-size: 14px;
+    text-align: center;
+}
+
 .slider-editor-main .slider-change-radio {
     width: 132px;
     height: 8px;
@@ -448,14 +471,14 @@ input.range-slider-ch:checked + label .slider-change-radio {
 /*range-slider-left-menu*/
 .range-slider-editor .input-range__slider, .range-slider-editor-big .input-range__slider {
     appearance: none;
-    width: 18px;
-    height: 8px;
+    width: 20px;
+    height: 12px;
     transform: rotate(90deg);
     background: rgb(72, 185, 242);
     cursor: pointer;
     display: block;
     margin-left: -0.6rem;
-    margin-top: -5px;
+    margin-top: -10px;
     outline: none;
     position: absolute;
     top: 50%;
@@ -523,7 +546,7 @@ input.range-slider-ch:checked + label .slider-change-radio {
 }
 
 .range-slider-editor .input-range__track, .range-slider-editor-big .input-range__track {
-    height: 4px;
+    height: 8px;
     background: rgb(60, 60, 60);
     cursor: pointer;
     display: block;
